# pgmcp

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 10251b001292_add_foreignkey_to_answers_question_id.py  15f76627bb42_add_performance_indexes_to_elements.py  16e380cc05a7_add_index_for_embeddings.py  1ef3915e7c9a_updating_overall_structure.py  20250814_migrate_chunk_embeddings.py  20efbb295cb3_fix_defaults.py  21d253652beb_fix_for_nullable.py  4402131ef033_adding_tree_rebuild_function.py  5290ae5b0a1c_pluralize_elements_table.py  6b0771e91725_update_chunk_columns.py  6b0e1572ef9e_drop_elements_table_and_model.py  79e67597a081_migrate_embeddings.py  7a4260159cb7_change_crawljob_json_columns_to_jsonb.py  7f09ea4bf61b_add_foreignkey_to_chunks_document_id.py  83a900f9a687_convert_log_level_from_string_to_enum.py  89cfe75a5fd8_update_chunk_indexing.py  9ca0d03039cb_remove_rebuild_element_tree.py  a77cefd5372a_change_children_to_descendants_counter_.py  b0957e0b777f_update_tree_indexing.py  b6aee5fc4fca_drop_chunk_embeddings.py  c1f6d67790b6_add_foreignkey_to_answers_question_id.py  c2117c48735c_rename_crawl_log_table_to_plural.py  c819a0605adb_updating_sectionables.py  cb13bcddc8d0_create_user_model_tables.py  cd7da7af540d_initial.py  e0cb8e52608b_convert_log_level_from_enum_to_string.py  e25b67b8eb4b_updating_contentable.py  e3688c486b85_add_embedding_model.py  e76237f88175_pluralize_function.py  e8cbccfb1e23_add_missing_foreignkeys_to_models.py  ecabc0b5bdb0_convert_log_level_from_enum_to_string.py  f03b587b695d_add_fuzzy_search.py  fc72dba4a6d7_switching_to_sti_elements.py  fd073c241c1f_update_chunk_columns.py
notebooks/: chunking.ipynb  embedding.ipynb  search.ipynb
src/pgmcp/: __init__.py  ag_edge.py  ag_edges.py  ag_entity.py  ag_graph.py  ag_mutation.py  ag_patch.py  ag_properties.py  ag_query_builder.py  ag_vertex.py  ag_vertices.py  apache_age.py  async_worker_pool.py  cli.py  consts.py  custom_markdown_converter.py  data_source_name.py  database_connection_settings.py  db.py  db_ops.py  environment.py  html_washing_machine.py  knowledge_base.py  list_root_model.py  lru_cache.py  markdown_document.py  markdown_parser.py  object_graph.py  payload.py  pyvis.py  query_string_codec.py  royal_description.py  scrapy.py  server.py  server_age.py  server_crawl.py  server_kb.py  server_psql.py  settings.py  tree_walker.py  (+1 more)
src/pgmcp/chunking/: __init__.py  chunk.py  chunk_meta.py  document.py  encodable_chunk.py  heredoc_yaml.py  html_washing_machine.py  markdown_converter.py  slicer.py  text_splitter_protocol.py
src/pgmcp/models/: __init__.py  answer.py  base.py  base_functions.py  base_query_builder.py  chunk.py  code_block.py  concerns.py  content.py  corpus.py  crawl_item.py  crawl_job.py  crawl_log.py  document.py  element.py  embedding.py  library.py  listing.py  listing_item.py  mixin.py  paragraph.py  question.py  save_graph.py  save_walker.py  section.py  section_item.py  sentence.py  table.py  table_row.py  table_row_cell.py
src/pgmcp/scraper/: cli.py  item.py  job.py  job_periodic_status_ext.py  job_state_ext.py  pipeline.py  settings.py  spider.py
src/pgmcp/scraper/models/: README.md  __init__.py  base.py  crawl_item.py  crawl_job.py  crawl_log.py  log_level.py
src/pgmcp/scrapy/: cli.py  item.py  job.py  job_periodic_status_ext.py  job_state_ext.py  pipeline.py  settings.py  spider.py  spider_closed_reason.py
src/pgmcp/scrapy/models/: base.py  (+3 more)
tests/pgmcp/: __init__.py  conftest.py  test_ag_edge.py  test_ag_edges.py  test_ag_entity.py  test_ag_graph.py  test_ag_mutation.py  test_ag_patch.py  test_ag_properties.py  test_ag_query_builder.py  test_ag_vertex.py  test_ag_vertices.py  test_apache_age.py  test_chunking_encodable_chunk.py  test_html_washing_machine.py  test_markdown_document.py  test_models_document.py  test_query_string_codec.py  test_server_age.py  test_server_crawl.py
tests/pgmcp/chunking/: test_encodable_chunk.py
tests/pgmcp/setup/: database.py  sqlalchemy.py
