[project]
name = "pgmcp"
version = "0.1.0"
description = "PostgreSQL MCP"
readme = "README.md"
authors = [
    { name = "veloper" }
]
requires-python = ">=3.11"
dependencies = [
    "scrapy>=2.13.0",
    "alembic>=1.16.3",
    "anytree>=2.13.0",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.4",
    "blinker>=1.9.0",
    "click>=8.2.1",
    "fastmcp>=2.8.1",
    "geoalchemy2>=0.17.1",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "langchain>=0.3.26",
    "markdown-it-py>=3.0.0",
    "markdown2>=2.5.3",
    "markdownify>=1.1.0",
    "mistletoe>=1.4.0",
    "nanoid>=2.0.0",
    "networkx>=3.5",
    "numpy>=1.26.4,<2",
    "pgvector>=0.4.1",
    "protobuf>=6.31.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-describe>=2.2.0",
    "pytest-profiling>=1.8.1",
    "pytest-sugar>=1.0.0",
    "pytest-timeout>=2.4.0",
    "pyvis>=0.3.2",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "scipy>=1.16.0",
    "sentencepiece>=0.2.0",
    "sh>=2.2.2",
    "snakeviz>=2.2.2",
    "sqlalchemy-declarative-extensions>=0.15.13",
    "sqlalchemy-json>=0.7.0",
    "sqlalchemy-mixins>=2.0.5",
    "sqlalchemy-searchable>=2.1.0",
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy[asyncio]>=2.0.41",
    "tiktoken>=0.9.0",
    "trafilatura>=2.0.0",
    "unstructured[md]>=0.18.5",
    "scrapy-fake-useragent>=1.4.4",
    "psycopg2>=2.9.10",
    "jupyter>=1.1.1",
    "lxml>=5.4.0",
    "goose3>=3.1.19",
    "justext>=3.0.2",
    "newspaper3k>=0.2.8",
    "openai>=1.98.0",
]

[project.scripts]
pgmcp = "pgmcp:cli.main"

[tool.pytest.ini_options]
describe_prefixes = ["describe_"]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
